--- a/package.json
+++ b/package.json
@@ -10,19 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "*",
-    "body-parser": "*",
-    "connect-flash": "*",
-    "cookie-parser": "^1.4.1",
-    "express": "*",
-    "express-handlebars": "*",
-    "express-messages": "*",
-    "express-session": "*",
-    "express-validator": "*",
-    "mongodb": "*",
-    "mongoose": "*",
-    "passport": "*",
-    "passport-http": "*",
-    "passport-local": "*"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "handlebars": "^4.0.11",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.7"
   }
 }
