--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,8 @@
-
 {
     "development": {
       "username": "root",
-      "password": null,
-      "database": "UPDATE",
+      "password": "password",
+      "database": "passport_demo",
       "host": "127.0.0.1",
       "dialect": "mysql"
     },
