--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express": "^4.16.3",
     "handlebars": "^4.0.11",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.37.7"
+    "sequelize": "^4.37.7",
+    "bcrypt-nodejs": "0.0.3",
+    "express-session": "^1.14.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
